--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,9 +1,8 @@
-<body class="awful">
-    <h1>W3LC0ME T0 0UR W3B APP</h1>
-    <h2>FEA$T Y0UR 3Y3$ 0N THI$</h2>
-    <h3>B3AUTY 0F A W3B$ITE</h3>
-    <h4>PL3A$E 3NJ0Y</h4>
-    <p>
-        P.$. You're welcome...
-    </p>
-</body>
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+    <body class="awful">
+        <h1>W3LC0ME T0 0UR W3B APP</h1>
+        <h2>FEA$T Y0UR 3Y3$ 0N THI$</h2>
+        <h3>B3AUTY 0F A W3B$ITE</h3>
+        <h4>PL3A$E 3NJ0Y</h4>
+            <a href="./home.hbs">P.$. You're welcome...</a>
+    </body>
