--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,8 @@
-<body class="notAwful">
-    <img src="{{name}}">
-    <h2>{{name}}</h2>
-    <h4>Favourite topic: {{favourite}}</h4>
-    <h4>Least favourite topic: {{leastFavourite}}</h4>
-    <button type="button" onclick="">Edit</button>
-</body>
+<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+    <body class="notAwful">
+        <img src="../images/{{name}}" ref="pifture of {{name}}">
+        <h2>{{name}}</h2>
+        <h4>Favourite topic: {{favourite}}</h4>
+        <h4>Least favourite topic: {{leastFavourite}}</h4>
+        <button type="button" onclick="">Edit</button>
+    </body>
