add get for main page

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -4,5 +4,5 @@
         <h2>FEA$T Y0UR 3Y3$ 0N THI$</h2>
         <h3>B3AUTY 0F A W3B$ITE</h3>
         <h4>PL3A$E 3NJ0Y</h4>
-            <a href="./home.hbs">P.$. You're welcome...</a>
+            <a href="/home/students">P.$. You're welcome...</a>
     </body>
