complete basic template hbs

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,8 +1,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
     <body class="notAwful">
-        <img src="../images/{{name}}" ref="pifture of {{name}}">
+        <img src="{{image}}" ref="picture of {{name}}">
         <h2>{{name}}</h2>
-        <h4>Favourite topic: {{favourite}}</h4>
-        <h4>Least favourite topic: {{leastFavourite}}</h4>
+        <h4>Favourite topic: {{fave}}</h4>
+        <h4>Least favourite topic: {{least_fave}}</h4>
         <button type="button" onclick="">Edit</button>
     </body>
