--- a/views/students.hbs
+++ b/views/students.hbs
@@ -1,4 +1,17 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
     <body class="notAwful">
         <h1>Enspiral Dev Class of 2020 <em>Kotare</em></h1>
+        <h3>Class register:</h3>
+        <div class="container">
+            {{#each students}}
+            <a href="./profile/{{id}}">
+                <div class="subcontainer class">
+                    <div class="simple">
+                        <img src="{{image}}">
+                        <h4>Name: {{name}}</h4>
+                    </div>
+                </div>
+            </a>
+            {{/each}}
+        </div>
     </body>
