--- a/public/main.css
+++ b/public/main.css
@@ -35,6 +35,11 @@
     margin: 0;
 }
 
+.notAwful img {
+    width: 300px;
+    margin-top: 20px;
+}
+
 .container {
     display: block;
     background-color: #6A9FC8;
@@ -51,7 +56,7 @@
     width: 20%;
     margin: 2%;
     background-color: #F4F6F3;
-    border-radius: 3%
+    border-radius: 3%;
 }
 
 .subcontainer img {
@@ -71,4 +76,25 @@ header {
 
 .simple:hover {
     text-decoration: underline;
+}
+
+.profile {
+    background-color:#92dbc6;
+    margin: 20px 20%;
+    padding: 20px;
+}
+
+button {
+    display: block;
+    float: center;
+    padding: 0.5em 3em;
+    border: 0.16em solid #656969;
+    margin: 0 0.3em 0.3em 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 400;
+    color: #656969;
+    text-align: center;
+    background-color: #92dbc6;
 }
