--- a/views/home/profile.hbs
+++ b/views/home/profile.hbs
@@ -2,7 +2,7 @@
     <body class="notAwful">
         <img src="{{image}}" ref="picture of {{name}}">
         <h2>{{name}}</h2>
-        <h4>Favourite topic: {{fave}}</h4>
-        <h4>Least favourite topic: {{least_fave}}</h4>
+        <h4>Favourite topic: {{fave_topic}}</h4>
+        <h4>Least favourite topic: {{leastFave}}</h4>
         <button type="button" onclick="">Edit</button>
     </body>
