--- a/views/home/profile.hbs
+++ b/views/home/profile.hbs
@@ -1,11 +1,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
     <div class="profile">
-        <h1>Student Profile:</h1>
         <body class="notAwful">
-            <img src="Images/fai.jpg" ref="picture of {{name}}">
+        <h1>Student Profile:</h1>
+            <img src="{{image}}" ref="picture of {{name}}">
             <h2>{{name}}</h2>
-                <h4>Favourite topic: {{fave}}</h4>
-                <h4>Least favourite topic: {{least_fave}}</h4>
+                <h4>Favourite topic: {{fave_topic}}</h4>
+                <h4>Least favourite topic: {{leastFave}}</h4>
             <button type="button" onclick="">Edit</button>
         </body>
     </div>
