--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>WorkWithMe Web App</title>
-        <link href="../main.css" rel="stylesheet" type="text/css">
+        <link href="/main.css" rel="stylesheet" type="text/css">
     </head>
     {{{body}}}
 </html>
