--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,5 +7,9 @@
         <title>WorkWithMe Web App</title>
         <link href="/main.css" rel="stylesheet" type="text/css">
     </head>
+    <div class="home">
+
+    <button><a href="/home/students">Home</a></button>
+    </div>
     {{{body}}}
 </html>
