--- a/public/main.css
+++ b/public/main.css
@@ -53,7 +53,7 @@
   border-style: solid;
   border-width: 2px;
   border-color: #143642;
-  width: 20%;
+  width: 15%;
   margin: 2%;
   background-color: #f4f6f3;
   border-radius: 3%;
@@ -97,4 +97,9 @@ button {
     color: #656969;
     text-align: center;
     background-color: #92dbc6;
+}
+
+.home {
+  margin: 5%;
+  display: inline;
 }
